--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.339",
+    "DocVersion": "1.341",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -88,7 +88,7 @@
       "showclassicthemes": false,
       "smartemaildatacard": false,
       "sqlstoredprocedureenabled": false,
-      "supportcolumnnamesasidentifiers": false,
+      "supportcolumnnamesasidentifiers": true,
       "tabledoesntwraprecords": true,
       "usedisplaynamemetadata": true,
       "useenforcesavedatalimits": true,
@@ -123,7 +123,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "QQ Team App",
+    "AppName": "24604168-8023-46a0-bd71-111aba1a97f3",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
