--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -146,7 +146,7 @@ LeadListScreen As screen:
                             SearchFields: =["Value"]
                             SearchItems: |-
                                 =Search(//Sort(Distinct(Filter(LeadInformations, Territory = cmbxregionfilterLS.Selected.Value),District),Value)
-                                Sort(Distinct(LeadInformations,District),Value),cmbxdistrictfilterLS.SearchText,"Value")
+                                Sort(Distinct(LeadInformations,District),Value),cmbxdistrictfilterLS.SearchText,Value)
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
@@ -169,7 +169,7 @@ LeadListScreen As screen:
                             SearchFields: =["Value"]
                             SearchItems: |-
                                 =Search(//Sort(Distinct(Filter(LeadInformations, Area = cmbxareafilterLS.Selected.Value),Territory),Value)
-                                Sort(Distinct(LeadInformations,Territory),Value),cmbxregionfilterLS.SearchText,"Value")
+                                Sort(Distinct(LeadInformations,Territory),Value),cmbxregionfilterLS.SearchText,Value)
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
@@ -188,7 +188,7 @@ LeadListScreen As screen:
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =Search(Sort(Distinct(LeadInformations,Area),Value),cmbxareafilterLS.SearchText,"Value")
+                            SearchItems: =Search(Sort(Distinct(LeadInformations,Area),Value),cmbxareafilterLS.SearchText,Value)
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
@@ -346,33 +346,33 @@ LeadListScreen As screen:
                                     Search(Filter(
                                         LeadInformations,
                                         QQTeamName = User().FullName && Email<>Blank(),Territory=cmbxregionfilterLS.Selected.Value ||IsBlank(cmbxregionfilterLS.Selected.Value) ,District=cmbxdistrictfilterLS.Selected.Value ||IsBlank(cmbxdistrictfilterLS.Selected.Value) ,Area=cmbxareafilterLS.Selected.Value ||IsBlank(cmbxareafilterLS.Selected.Value)
-                                    ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname","shlrf_leadtrackingnumber","shlrf_qqteamname"),
+                                    ),txtinptsearchLS.Text,shlrf_contractnumber,shlrf_mechanicname,shlrf_leadtrackingnumber,shlrf_qqteamname),
                                     If(
                                         VarOpenLeads = true,
                                         Search(Filter(
                                             LeadInformations,
                                             (LeadStatus = "Submitted" ||LeadStatus = "InProgress") && Email <> Blank()
                                             , Territory=cmbxregionfilterLS.Selected.Value ||IsBlank(cmbxregionfilterLS.Selected.Value) ,District=cmbxdistrictfilterLS.Selected.Value ||IsBlank(cmbxdistrictfilterLS.Selected.Value) ,Area=cmbxareafilterLS.Selected.Value ||IsBlank(cmbxareafilterLS.Selected.Value)
-                                        ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname","shlrf_leadtrackingnumber","shlrf_qqteamname")
+                                        ),txtinptsearchLS.Text,shlrf_contractnumber,shlrf_mechanicname,shlrf_leadtrackingnumber,shlrf_qqteamname)
                                         ,
                                         If(
                                             VarQuotedLeads = true,
                                            Search( Filter(
                                                 LeadInformations,
                                                 LeadStatus = "Quoted",Territory=cmbxregionfilterLS.Selected.Value ||IsBlank(cmbxregionfilterLS.Selected.Value) ,District=cmbxdistrictfilterLS.Selected.Value ||IsBlank(cmbxdistrictfilterLS.Selected.Value) ,Area=cmbxareafilterLS.Selected.Value ||IsBlank(cmbxareafilterLS.Selected.Value)
-                                            ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname","shlrf_leadtrackingnumber","shlrf_qqteamname"),
+                                            ),txtinptsearchLS.Text,shlrf_contractnumber,shlrf_mechanicname,shlrf_leadtrackingnumber,shlrf_qqteamname),
                                             If(
                                                 VarSoldLeads = true,
                                                Search( Filter(
                                                     LeadInformations,
                                                     LeadStatus = "Sold",Territory=cmbxregionfilterLS.Selected.Value ||IsBlank(cmbxregionfilterLS.Selected.Value) ,District=cmbxdistrictfilterLS.Selected.Value ||IsBlank(cmbxdistrictfilterLS.Selected.Value) ,Area=cmbxareafilterLS.Selected.Value ||IsBlank(cmbxareafilterLS.Selected.Value)
-                                                ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname","shlrf_leadtrackingnumber","shlrf_qqteamname"),
+                                                ),txtinptsearchLS.Text,shlrf_contractnumber,shlrf_mechanicname,shlrf_leadtrackingnumber,shlrf_qqteamname),
                                                 If(
                                                     VarRejectedLeads=true,
                                                      Search( Filter(
                                                     LeadInformations,
                                                     LeadStatus = "Rejected" && Email <> Blank(),Territory=cmbxregionfilterLS.Selected.Value ||IsBlank(cmbxregionfilterLS.Selected.Value) ,District=cmbxdistrictfilterLS.Selected.Value ||IsBlank(cmbxdistrictfilterLS.Selected.Value) ,Area=cmbxareafilterLS.Selected.Value ||IsBlank(cmbxareafilterLS.Selected.Value)
-                                                ),txtinptsearchLS.Text,"shlrf_contractnumber","shlrf_mechanicname","shlrf_leadtrackingnumber","shlrf_qqteamname")
+                                                ),txtinptsearchLS.Text,shlrf_contractnumber,shlrf_mechanicname,shlrf_leadtrackingnumber,shlrf_qqteamname)
                                                 )
                                             )
                                         )
